Fix overflow for mobile.

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -6,6 +6,7 @@ body{
     margin: 20px;
     align-self: center;
     color: #404041;
+    overflow: hidden;
 }
 
 body *:focus{
